<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    android:padding="8dp">

    <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:padding="8dp">

        <ImageView
            android:id="@+id/img_photo"
            android:layout_width="120dp"
            android:layout_height="170dp"
            android:scaleType="fitCenter"
            android:src="@color/colorPrimary" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@id/img_photo"
            android:layout_toRightOf="@id/img_photo"
            android:text="@string/movie_name"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_name"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@id/img_photo"
            android:layout_toRightOf="@+id/img_photo"
            android:text="@string/movie_genre" />

        <TextView
            android:id="@+id/tv_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_genre"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@id/img_photo"
            android:layout_toRightOf="@+id/img_photo"
            android:text="@string/movie_overview"
            android:maxLines="3"/>


    </RelativeLayout>


</android.support.v7.widget.CardView>